Fill JVM/GarbageCollector: 6 cards from JDK 21 GC Tuning Guide, JVMS 2.5.3, HotSpot Glossary, JEP 318/333/439/189